--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
             </div>
             <div class="card">
-                <a target="_blank" href="https://nikhilsoni-ux.github.io/bgmi_clone/"><img src="./images/bgmi_clone.png" alt=""> (Under Development) <br> Battlegrounds Mobile India CLone<br></a>
+                <a target="_blank" href="https://nikhilsoni-ux.github.io/bgmi_clone/"><img src="./images/bgmi_clone.png" alt="">Battlegrounds Mobile India CLone<br></a>
             </div>
         </div>
     </div>
